--- a/dev/source/repos/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/dev/source/repos/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -49,7 +49,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -70,6 +70,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>C:\Users\HCI4H\Documents\GitHub\RoadtoRecovery\dev\source\repos\ConsoleApplication1\ConsoleApplication1\include;C:\Users\HCI4H\Documents\GitHub\RoadtoRecovery\dev\source\repos\ConsoleApplication1\ConsoleApplication1\curl-8.8.0_1-win64-mingw\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\HCI4H\Documents\GitHub\RoadtoRecovery\dev\source\repos\ConsoleApplication1\ConsoleApplication1\curl-8.8.0_1-win64-mingw\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\Users\HCI4H\Documents\GitHub\RoadtoRecovery\dev\source\repos\ConsoleApplication1\ConsoleApplication1\include;C:\Users\HCI4H\Documents\GitHub\RoadtoRecovery\dev\source\repos\ConsoleApplication1\ConsoleApplication1\curl-8.8.0_1-win64-mingw\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\HCI4H\Documents\GitHub\RoadtoRecovery\dev\source\repos\ConsoleApplication1\ConsoleApplication1\curl-8.8.0_1-win64-mingw\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
@@ -126,10 +130,12 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libcurl.dll.a;vncsdk.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\HCI4H\Documents\GitHub\RoadtoRecovery\dev\source\repos\ConsoleApplication1\ConsoleApplication1\lib\win-x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
