--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ dev/vnc app/samples/basicViewerWin/out/
 dev/VoiceChat/dist/
 dev/VoiceChat/build/
 dev/VoiceChat/pythonclient.spec
+
+dev/source/repos/ConsoleApplication1/.vs/
+
